--- a/proai_settings/proai.properties
+++ b/proai_settings/proai.properties
@@ -93,7 +93,7 @@ proai.validateUpdates = false
 # a permanent directory of your choosing.  The default value here is 
 # just used for testing.
 #
-proai.cacheBaseDir = /repo/proai/cache
+proai.cacheBaseDir = /xxxx/proai/cache
 
 # Where OAI-PMH session data will be stored when needed.
 # This directory will be created at startup if it doesn't already exist.
@@ -102,11 +102,11 @@ proai.cacheBaseDir = /repo/proai/cache
 # subdirectory beneath this one.  They are automatically created and 
 # removed as needed.
 #
-proai.sessionBaseDir = /repo/proai/sessions
+proai.sessionBaseDir = /xxxx/proai/sessions
 
 # Where to store schema files if validation is enabled.
 #
-proai.schemaDir = /repo/proai/schemas
+proai.schemaDir = /xxxx/proai/schemas
 
 ##################################
 # Primary Database Configuration #
